# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Dec 2014; Johann Schmitz <ercpe@gentoo.org> -squashed-portage-0.19.ebuild,
  squashed-portage-0.19-r1.ebuild:
  Removed old; stable 0.19-r1

*squashed-portage-0.19-r1 (14 Dec 2014)

  14 Dec 2014; Johann Schmitz <ercpe@gentoo.org>
  +squashed-portage-0.19-r1.ebuild, squashed-portage-0.19.ebuild:
  Fixed sed command

  14 Dec 2014; Johann Schmitz <ercpe@gentoo.org> squashed-portage-0.19.ebuild:
  Stable for x86 and amd64 to resolve error message with newer portage

  23 Nov 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Update to latest HEAD

  10 Nov 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.19.ebuild,
  squashed-portage-9999.ebuild:
  Fix lidbir sed

  10 Nov 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.19.ebuild:
  Fix lidbir sed

*squashed-portage-0.19 (10 Nov 2014)

  10 Nov 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.19.ebuild,
  squashed-portage-9999.ebuild:
  Version Bump

  04 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  squashed-portage-0.18-r1.ebuild:
  Dropped arm due to missing kwd on aufs-utils; stable for x86 and amd64

*squashed-portage-0.18-r1 (18 Oct 2014)

  18 Oct 2014; Johann Schmitz <johann@gentoo.org>
  +squashed-portage-0.18-r1.ebuild, -squashed-portage-0.18.ebuild:
  Dropped cacert condition on ca-certificates

  05 Oct 2014; Johann Schmitz <ercpe@gentoo.org> squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Updated HOMEPAGE of squashed-portage

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Drop unnecessary dep

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.16.ebuild,
  -squashed-portage-0.17.ebuild, squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Fix portage dep version

*squashed-portage-0.18 (25 Sep 2014)
