@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/squashed-portage
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Jan 2015; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
+  Fix broken live ebuild due to repo rearrangement
 
   14 Dec 2014; Johann Schmitz <ercpe@gentoo.org> -squashed-portage-0.19.ebuild,
   squashed-portage-0.19-r1.ebuild:
